--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,5 @@
     <dimen name="tres_dp">3dp</dimen>
     <dimen name="sete_dp">7dp</dimen>
     <dimen name="dez_dp">10dp</dimen>
+    <dimen name="um_dp">1dp</dimen>
 </resources>
