--- a/app/src/main/res/layout/dia_dialog_layout.xml
+++ b/app/src/main/res/layout/dia_dialog_layout.xml
@@ -9,10 +9,14 @@
         android:orientation="vertical">
 
         <TextView
+            android:elevation="@dimen/cinco_dp"
+            android:background="@drawable/bg_atual"
             android:id="@+id/txtTitulo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:layout_marginTop="@dimen/um_dp"
+            android:layout_marginBottom="@dimen/dez_dp"
             android:textAppearance="?android:textAppearanceLarge" />
 
         <android.support.design.widget.TextInputLayout
@@ -27,6 +31,9 @@
         </android.support.design.widget.TextInputLayout>
 
         <LinearLayout
+            android:layout_marginBottom="@dimen/dez_dp"
+            android:background="@drawable/bg_padrao"
+            android:elevation="@dimen/cinco_dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -49,155 +56,131 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/label_sincronizado" />
-
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="@string/label_manha"
-                android:textAppearance="?android:textAppearanceMedium" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/label_entrada" />
-
-                <TextView
-                    android:id="@+id/btnManhaIni"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/quinze_dp"
-                    android:elevation="@dimen/doze_dp"
-                    android:padding="@dimen/vinte_dp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/label_saida" />
-
-                <TextView
-                    android:id="@+id/btnManhaFim"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/quinze_dp"
-                    android:elevation="@dimen/doze_dp"
-                    android:padding="@dimen/vinte_dp" />
-            </LinearLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="@string/label_tarde"
-                android:textAppearance="?android:textAppearanceMedium" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/label_entrada" />
-
-                <TextView
-                    android:id="@+id/btnTardeIni"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/quinze_dp"
-                    android:elevation="@dimen/doze_dp"
-                    android:padding="@dimen/vinte_dp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/label_saida" />
-
-                <TextView
-                    android:id="@+id/btnTardeFim"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/quinze_dp"
-                    android:elevation="@dimen/doze_dp"
-                    android:padding="@dimen/vinte_dp" />
-            </LinearLayout>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="@string/label_noite"
-                android:textAppearance="?android:textAppearanceMedium" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/label_entrada" />
-
-                <TextView
-                    android:id="@+id/btnNoiteIni"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/quinze_dp"
-                    android:elevation="@dimen/doze_dp"
-                    android:padding="@dimen/vinte_dp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/label_saida" />
-
-                <TextView
-                    android:id="@+id/btnNoiteFim"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/quinze_dp"
-                    android:elevation="@dimen/doze_dp"
-                    android:padding="@dimen/vinte_dp" />
-            </LinearLayout>
-        </LinearLayout>
-
-        <LinearLayout
+            android:layout_marginBottom="@dimen/dez_dp"
+            android:background="@drawable/bg_padrao"
+            android:elevation="@dimen/cinco_dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/label_entrada" />
+
+            <TextView
+                android:id="@+id/btnManhaIni"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/quinze_dp"
+                android:elevation="@dimen/doze_dp"
+                android:padding="@dimen/vinte_dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/label_saida" />
+
+            <TextView
+                android:id="@+id/btnManhaFim"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/quinze_dp"
+                android:elevation="@dimen/doze_dp"
+                android:padding="@dimen/vinte_dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_marginBottom="@dimen/dez_dp"
+            android:background="@drawable/bg_padrao"
+            android:elevation="@dimen/cinco_dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/label_entrada" />
+
+            <TextView
+                android:id="@+id/btnTardeIni"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/quinze_dp"
+                android:elevation="@dimen/doze_dp"
+                android:padding="@dimen/vinte_dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/label_saida" />
+
+            <TextView
+                android:id="@+id/btnTardeFim"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/quinze_dp"
+                android:elevation="@dimen/doze_dp"
+                android:padding="@dimen/vinte_dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_marginBottom="@dimen/dez_dp"
+            android:background="@drawable/bg_padrao"
+            android:elevation="@dimen/cinco_dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/label_entrada" />
+
+            <TextView
+                android:id="@+id/btnNoiteIni"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/quinze_dp"
+                android:elevation="@dimen/doze_dp"
+                android:padding="@dimen/vinte_dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/label_saida" />
+
+            <TextView
+                android:id="@+id/btnNoiteFim"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/quinze_dp"
+                android:elevation="@dimen/doze_dp"
+                android:padding="@dimen/vinte_dp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_marginBottom="@dimen/sete_dp"
+            android:background="@drawable/bg_padrao"
+            android:elevation="@dimen/cinco_dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btnExcluir"
+                style="?android:attr/buttonBarButtonStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/label_excluir" />
 
             <Button
                 android:id="@+id/btnCancelar"
