--- a/app/src/main/res/layout/dia_item_grupo_cabecalho_layout.xml
+++ b/app/src/main/res/layout/dia_item_grupo_cabecalho_layout.xml
@@ -42,7 +42,7 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_marginRight="@dimen/cinco_dp"
-		android:background="@drawable/bg_preto_hora"
+		android:background="@drawable/bg_hora"
 		android:elevation="@dimen/vinte_dp"
 		android:paddingLeft="@dimen/sete_dp"
 		android:paddingRight="@dimen/sete_dp"
@@ -53,7 +53,7 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_marginRight="@dimen/vinte_dp"
-		android:background="@drawable/bg_preto_hora"
+		android:background="@drawable/bg_hora"
 		android:elevation="@dimen/vinte_dp"
 		android:paddingLeft="@dimen/sete_dp"
 		android:paddingRight="@dimen/sete_dp"
@@ -64,7 +64,7 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_marginRight="@dimen/cinco_dp"
-		android:background="@drawable/bg_preto_hora"
+		android:background="@drawable/bg_hora"
 		android:elevation="@dimen/vinte_dp"
 		android:paddingLeft="@dimen/sete_dp"
 		android:paddingRight="@dimen/sete_dp"
@@ -74,7 +74,7 @@
 		android:id="@+id/txtTardeFim"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:background="@drawable/bg_preto_hora"
+		android:background="@drawable/bg_hora"
 		android:elevation="@dimen/vinte_dp"
 		android:paddingLeft="@dimen/sete_dp"
 		android:paddingRight="@dimen/sete_dp"
