--- a/app/src/main/res/drawable/bg_360_padrao.xml
+++ b/app/src/main/res/drawable/bg_360_padrao.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-	android:shape="rectangle">
+	android:shape="oval">
 	<solid android:color="@color/cinza_claro" />
-	<corners android:radius="@dimen/quinze_dp" />
 </shape>
