--- a/app/src/main/res/layout/dia_item_grupo_detalhe_layout.xml
+++ b/app/src/main/res/layout/dia_item_grupo_detalhe_layout.xml
@@ -20,7 +20,7 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_marginRight="@dimen/cinco_dp"
-			android:background="@drawable/bg_preto_hora"
+			android:background="@drawable/bg_hora"
 			android:elevation="@dimen/vinte_dp"
 			android:paddingLeft="@dimen/sete_dp"
 			android:paddingRight="@dimen/sete_dp"
@@ -31,7 +31,7 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_marginRight="@dimen/cinco_dp"
-			android:background="@drawable/bg_preto_hora"
+			android:background="@drawable/bg_hora"
 			android:elevation="@dimen/vinte_dp"
 			android:paddingLeft="@dimen/sete_dp"
 			android:paddingRight="@dimen/sete_dp"
@@ -56,7 +56,7 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_marginRight="@dimen/cinco_dp"
-			android:background="@drawable/bg_preto_hora"
+			android:background="@drawable/bg_hora"
 			android:elevation="@dimen/vinte_dp"
 			android:paddingLeft="@dimen/sete_dp"
 			android:paddingRight="@dimen/sete_dp"
@@ -67,7 +67,7 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_marginRight="@dimen/cinco_dp"
-			android:background="@drawable/bg_preto_hora"
+			android:background="@drawable/bg_hora"
 			android:elevation="@dimen/vinte_dp"
 			android:paddingLeft="@dimen/sete_dp"
 			android:paddingRight="@dimen/sete_dp"
@@ -92,7 +92,7 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_marginRight="@dimen/cinco_dp"
-			android:background="@drawable/bg_preto_hora"
+			android:background="@drawable/bg_hora"
 			android:elevation="@dimen/vinte_dp"
 			android:paddingLeft="@dimen/sete_dp"
 			android:paddingRight="@dimen/sete_dp"
@@ -103,7 +103,7 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_marginRight="@dimen/cinco_dp"
-			android:background="@drawable/bg_preto_hora"
+			android:background="@drawable/bg_hora"
 			android:elevation="@dimen/vinte_dp"
 			android:paddingLeft="@dimen/sete_dp"
 			android:paddingRight="@dimen/sete_dp"
