--- a/app/src/main/res/layout/dia_fragment_layout.xml
+++ b/app/src/main/res/layout/dia_fragment_layout.xml
@@ -4,7 +4,7 @@
 	android:layout_height="match_parent">
 
 	<ExpandableListView
-		android:id="@+id/listView"
+		android:id="@+id/expandableListView"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		android:animateLayoutChanges="true" />
