--- a/app/src/main/res/layout/dia_item_grupo_cabecalho_layout.xml
+++ b/app/src/main/res/layout/dia_item_grupo_cabecalho_layout.xml
@@ -28,13 +28,13 @@
 		android:layout_height="wrap_content"
 		android:layout_gravity="center"
 		android:layout_marginRight="@dimen/sete_dp"
-		android:background="@drawable/bg_360_atual"
+		android:background="@drawable/bg_360_sinc"
 		android:elevation="@dimen/dez_dp"
 		android:gravity="center"
-		android:maxHeight="@dimen/dez_dp"
-		android:maxWidth="@dimen/dez_dp"
-		android:minHeight="@dimen/dez_dp"
-		android:minWidth="@dimen/dez_dp"
+		android:maxHeight="@dimen/doze_dp"
+		android:maxWidth="@dimen/doze_dp"
+		android:minHeight="@dimen/doze_dp"
+		android:minWidth="@dimen/doze_dp"
 		android:paddingLeft="@dimen/sete_dp"
 		android:paddingRight="@dimen/sete_dp" />
 
@@ -42,15 +42,15 @@
 		android:id="@+id/txtVal"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:background="@drawable/bg_360_valido"
 		android:layout_gravity="center"
 		android:layout_marginRight="@dimen/sete_dp"
+		android:background="@drawable/bg_360_valido"
 		android:elevation="@dimen/dez_dp"
 		android:gravity="center"
-		android:maxHeight="@dimen/dez_dp"
-		android:maxWidth="@dimen/dez_dp"
-		android:minHeight="@dimen/dez_dp"
-		android:minWidth="@dimen/dez_dp"
+		android:maxHeight="@dimen/doze_dp"
+		android:maxWidth="@dimen/doze_dp"
+		android:minHeight="@dimen/doze_dp"
+		android:minWidth="@dimen/doze_dp"
 		android:paddingLeft="@dimen/sete_dp"
 		android:paddingRight="@dimen/sete_dp" />
 
@@ -58,15 +58,15 @@
 		android:id="@+id/txtId"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:background="@drawable/bg_360_id"
 		android:layout_gravity="center"
 		android:layout_marginRight="@dimen/sete_dp"
+		android:background="@drawable/bg_360_id"
 		android:elevation="@dimen/dez_dp"
 		android:gravity="center"
-		android:maxHeight="@dimen/dez_dp"
-		android:maxWidth="@dimen/dez_dp"
-		android:minHeight="@dimen/dez_dp"
-		android:minWidth="@dimen/dez_dp"
+		android:maxHeight="@dimen/doze_dp"
+		android:maxWidth="@dimen/doze_dp"
+		android:minHeight="@dimen/doze_dp"
+		android:minWidth="@dimen/doze_dp"
 		android:paddingLeft="@dimen/sete_dp"
 		android:paddingRight="@dimen/sete_dp" />
 
