--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
 	<color name="branco">#FFFFFF</color>
 	<color name="preto">#777777</color>
 	<color name="preto2">#000000</color>
+	<color name="sinc">#FF0990FF</color>
 </resources>
