--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
 	<dimen name="cinco_dp">5dp</dimen>
 	<dimen name="doze_dp">12dp</dimen>
 	<dimen name="tres_dp">3dp</dimen>
+	<dimen name="seis_dp">6dp</dimen>
 	<dimen name="sete_dp">7dp</dimen>
 	<dimen name="dez_dp">10dp</dimen>
 	<dimen name="um_dp">1dp</dimen>
