--- a/app/src/main/res/layout/dia_atual_layout.xml
+++ b/app/src/main/res/layout/dia_atual_layout.xml
@@ -51,6 +51,22 @@
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:layout_marginBottom="@dimen/dez_dp"
+			android:background="@drawable/bg_domingo"
+			android:elevation="@dimen/cinco_dp"
+			android:gravity="center"
+			android:layout_margin="@dimen/quinze_dp"
+			android:orientation="horizontal">
+
+			<TextView
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="@string/agendado" />
+		</LinearLayout>
+
+		<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_marginBottom="@dimen/dez_dp"
 			android:background="@drawable/bg_padrao"
 			android:elevation="@dimen/cinco_dp"
 			android:gravity="center"
@@ -211,13 +227,9 @@
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:layout_marginLeft="@dimen/tres_dp" />
-			</LinearLayout>
-
-			<LinearLayout
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content">
 
 				<TextView
+					android:layout_marginLeft="@dimen/quinze_dp"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:text="@string/label_total_lei" />
@@ -227,13 +239,9 @@
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:layout_marginLeft="@dimen/tres_dp" />
-			</LinearLayout>
-
-			<LinearLayout
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content">
 
 				<TextView
+					android:layout_marginLeft="@dimen/quinze_dp"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:text="@string/label_debito" />
@@ -243,13 +251,9 @@
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:layout_marginLeft="@dimen/tres_dp" />
-			</LinearLayout>
-
-			<LinearLayout
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content">
 
 				<TextView
+					android:layout_marginLeft="@dimen/quinze_dp"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:text="@string/label_credito" />
